--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 25
-    buildToolsVersion "24.0.2"
+    buildToolsVersion '25.0.2'
     defaultConfig {
         applicationId "com.banderkat.bikesharerouting"
         minSdkVersion 15
@@ -25,10 +25,13 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
 
-    compile ('com.mapbox.mapboxsdk:mapbox-android-sdk:4.2.2@aar'){
+    compile ('com.mapbox.mapboxsdk:mapbox-android-sdk:5.0.1@aar'){
         transitive=true
     }
 
+    compile 'com.mapbox.mapboxsdk:mapbox-android-ui:2.0.0'
+
+    // must sync with the version referenced in mapbox-android-sdk dependencies
     compile 'com.android.support:appcompat-v7:25.2.0'
     testCompile 'junit:junit:4.12'
 }
